v3.3.24 (XXXX-XX-XX)
--------------------

* upgraded arangodb starter version to 0.14.12

* upgrade arangosync version to 0.6.5

* arangoimport would not stop, much less report, communications errors.  Add CSV reporting
  of line numbers that are impacted during such errors

* changed several internal VelocyPack comparisons in the cluster to not check for bytewise identity,
  but for logical intentity of objects

* fix handling 0 byte-WAL files in RocksDB engine when encryption is turned on. From now
  on, any 0 byte-WAL files will be ignored when found at startup and not trigger a "Corruption" error.

* fix timeout-response in case of simultaneous index create/drop in cluster

* Fixed parsing of ArangoDB config files with inlined comments. Previous versions didn't handle
  line comments properly if they were appended to an otherwise valid option value.

  For example, the comment in the line

      max-total-wal-size = 1024000 # 1M

  was not ignored and made part of the value. In the end, the value was interpreted as if

      max-total-wal-size = 10240001000000

  was specified.
  This version fixes the handling of comments in the config files so that they behave as intended.

* fixed a crash when posting an async request to the server using the "x-arango-async"
  request header and the server's request queue was full

* fix client id lookup table in agency

* fix agency issue in abort of cleanOutServer job

* fix agency issue with TTL discovered in 3.4.6

* fix agency issue with election timeout


v3.3.23 (2019-04-14)
--------------------

* Added coordinator route for agency dump

* upgraded arangosync version to 0.6.3

* fixed internal issue #2946: create graph autocomplete was not working under
  certain circumstances.

* fixed a crash (SIGSEGV) when opening a RocksDB database directory that
  contained an empty (0 bytes filesize) journal file and encryption was in use.

* don't attempt to remove non-existing WAL files, because such attempt will