@@ -1,6 +1,9 @@
 v3.3.24 (XXXX-XX-XX)
 --------------------
 
+* Decreased unnecessary wait times for agency callbacks in case they were
+  called earlier than expected by main thread.
+
 * upgraded arangodb starter version to 0.14.12
 
 * upgrade arangosync version to 0.6.5
